--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,7 +8,7 @@ body {
 .banner {
     width: 100%;
     height: 30vh;
-    background-image: url("banner.png");
+    background-image: url("banner.jpg");
     background-size: cover;
     background-position: center;
 }
