--- a/assets/styles.css
+++ b/assets/styles.css
@@ -44,7 +44,10 @@ h1, h2 {
 }
 .menu {
     padding-bottom: 10px;
-    max-width: fit-content;
+
+    display: inline-block;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
